# biasguard

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  new_failure_mode.md
.github/workflows/: ci.yml
docs/: api-reference.md  architecture.md  configuration.md  contributing.md  deploying-responsibly.md  examples.md  how-backtests-lie.md  installation.md  quickstart.md  release-notes-1.0.0.md  roadmap.md  tutorial.md
examples/: 01_data_layer.py  02_causal_engine.py  03_execution_core.py  04_report_and_fingerprint.py  05_integrity_framework.py  06_monte_carlo.py  07_execution_profiles_and_audit.py  08_educational_strategies.py
src/biasguard/: __init__.py  types.py
src/biasguard/analytics/: __init__.py  fingerprint.py  metrics.py
src/biasguard/audit/: __init__.py  export.py  targets.py
src/biasguard/data/: __init__.py  loaders.py  schema.py  validation.py
src/biasguard/engine/: __init__.py  backtester.py  data_handler.py
src/biasguard/events/: __init__.py  events.py
src/biasguard/execution/: __init__.py  broker.py  costs.py  fill_models.py  instrument.py  orders.py  portfolio.py  profiles.py
src/biasguard/indicators/: __init__.py  core.py
src/biasguard/montecarlo/: __init__.py  account.py  bootstrap.py  result.py  simulation.py
src/biasguard/report/: __init__.py  html.py
src/biasguard/report/templates/: report.html
src/biasguard/strategies/: __init__.py  catalog.py  educational.py
src/biasguard/strategy/: __init__.py  base.py
src/biasguard/validation/: __init__.py  base.py  context.py  registry.py  report.py
src/biasguard/validation/checks/: __init__.py  causality.py  costs.py  data.py  fills.py  montecarlo.py  robustness.py  statistics.py
tests/: conftest.py  test_package.py
tests/analytics/: test_fingerprint.py  test_metrics.py
tests/audit/: test_export.py  test_targets.py
tests/data/: test_loaders.py  test_schema.py  test_validation.py
tests/engine/: test_backtester.py  test_data_handler.py
tests/events/: test_events.py
tests/execution/: test_broker.py  test_costs.py  test_fill_models.py  test_instrument.py  test_integration.py  test_portfolio.py  test_position.py  test_profiles.py
tests/indicators/: test_indicators.py
tests/known_bad/: __init__.py  strategies.py
tests/montecarlo/: test_account.py  test_bootstrap.py  test_result.py  test_simulation.py
tests/report/: test_report.py
tests/strategies/: test_educational.py
tests/strategy/: test_strategy_base.py
tests/validation/: test_checks.py  test_framework.py
