[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biasguard"
version = "1.0.0"
description = "A bias-resistant, event-driven backtesting framework that tries to prove your backtest wrong."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Giantars" }]
keywords = [
    "backtesting",
    "quant",
    "trading",
    "event-driven",
    "lookahead-bias",
    "validation",
    "futures",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=12.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
report = ["plotly>=5.18", "jinja2>=3.1"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.8",
    "pandas-stubs>=2.0",
    "plotly>=5.18",
    "jinja2>=3.1",
]

[project.urls]
Homepage = "https://github.com/Giantars/biasguard"
Documentation = "https://github.com/Giantars/biasguard/tree/main/docs"
Issues = "https://github.com/Giantars/biasguard/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
biasguard = ["py.typed", "report/templates/*.html"]

# --------------------------------------------------------------------------- #
# Tooling
# --------------------------------------------------------------------------- #
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line length handled by black
]

[tool.ruff.lint.isort]
known-first-party = ["biasguard"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
# Analysis target is 3.12 so mypy can parse newer numpy's PEP 695 (`type`
# statement) stubs; runtime 3.11 support is still guaranteed by requires-python
# and the 3.11 job in CI (which runs the full test suite).
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true
warn_return_any = true

[[tool.mypy.overrides]]
module = ["plotly.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --import-mode=importlib"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
branch = true
source = ["biasguard"]

[tool.coverage.report]
show_missing = true
skip_covered = false
